--- a/Pong.vcxproj.filters
+++ b/Pong.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="code\game\Ball.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="code\utility\Clock.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="code\display\impl\Window.hpp">
@@ -114,6 +117,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="code\game\Ball.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="code\utility\Clock.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
